# nexcrypt

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: release.yml
src/app/encryptDecrypt/: Cryption.cpp  Cryption.hpp  CryptionMain.cpp
src/app/fileHandling/: IO.cpp  IO.hpp  ReadEnv.cpp
src/app/processes/: ProcessManagement.cpp  ProcessManagement.hpp  Task.hpp
